# credential-forge

./: .env.local  .gitignore  .pre-commit-config.yaml  AGENTIC_AI_FILE_GENERATION_IMPLEMENTATION.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_optimized.txt  COMPREHENSIVE_DOCUMENTATION.md  CONTENT_UNIQUENESS_IMPLEMENTATION.md  CONTRIBUTING.md  CORPORATE_NETWORK_SETUP.md  CREDENTIAL_PERFORMANCE_OPTIMIZATION.md  ENHANCED_AGENTIC_AI_EXAMPLE.md  ENHANCED_PROMPT_SYSTEM.md  INTERACTIVE_AI_SUMMARY.md  INTERACTIVE_NAVIGATION_FIX.md  LANGUAGE_MAPPING_IMPLEMENTATION.md  LICENSE  LLAMA_CPP_OPTIMIZATION_GUIDE.md  LLM_ERROR_FIX.md  LOCAL_PROJECT_COMPLETE.md  MULTI_MODEL_CONFIGURATION.md  NATIVE_BUILD_README.md  NEW_ARCHITECTURE_DESIGN.md  PROJECT_SUMMARY.md  QWEN_DOWNLOAD_FIX.md  README.md  README_LOCAL.md  SUPPORTED_FILE_FORMATS.md  SYNTHESIZER_ENHANCEMENTS_SUMMARY.md  ULTRA_FAST_OPTIMIZATION_SUMMARY.md  build_native.py  build_optimized.py  debug_credential_generation.py  debug_path_issue.py  demo_agentic_ai.py  demo_credential_prompts.py  demo_current_state.py  demo_interactive_ai.py  demo_local_project.py  (+40 more)
config/: fallback_config.yaml
credentialforge/: __init__.py  __main__.py  cli.py
credentialforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
credentialforge/agents/: __init__.py  content_generation_agent.py  orchestrator.py
credentialforge/db/: __init__.py  exceptions.py  regex_db.py
credentialforge/generators/: __init__.py  credential_generator.py  topic_generator.py
credentialforge/llm/: __init__.py  exceptions.py  llama_interface.py  llama_optimized.py  multi_model_manager.py
credentialforge/native/: __init__.py
credentialforge/synthesizers/: __init__.py  eml_format_synthesizer.py  excel_format_synthesizer.py  format_synthesizer.py  image_format_synthesizer.py  msg_format_synthesizer.py  opendocument_format_synthesizer.py  pdf_format_synthesizer.py  pptx_format_synthesizer.py  visio_format_synthesizer.py  word_format_synthesizer.py
credentialforge/utils/: __init__.py  config.py  config_loader.py  exceptions.py  interactive.py  language_content_generator.py  language_mapper.py  logger.py  network.py  performance_monitor.py  prompt_system.py  validators.py
data/: company_language_mapping.json  language_glossary.json  regex_db.json  synthesizer_config.json
docs/: api_reference.md  architecture.md  examples.md  installation.md  lightweight_llms.md
prompts/: content_generation_prompts.txt  credential_generation_prompts.txt  enhanced_content_prompts.txt  language_specific_prompts.txt  system_prompts.txt  validation_prompts.txt
src/: cpu_optimizer.cpp  credential_utils.cpp  llama_cpp_interface.cpp  memory_manager.cpp  parallel_executor.cpp
tests/: __init__.py  test_cli.py  test_generators.py  test_synthesizers.py
tests/integration/: __init__.py  test_full_generation.py
